--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -7,6 +7,20 @@
     font-size: 3rem;
     text-decoration: none;
 }
-.link {
-    color: grey;
+
+.nav-list {
+    display: flex;
+    list-style-type: none;
+    margin: 0;
+}
+
+.nav-item {
+    color: #999999;
+    font-size: 1rem;
+    margin-right: 1.3rem;
+    text-decoration: none;
+}
+
+.nav-item:hover {
+    color: #666666;
 }
